fixes #3 - Changes on example pages

--- a/examples/login_signup.html
+++ b/examples/login_signup.html
@@ -5,19 +5,10 @@
     <title></title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <!-- CSS -->
     <!-- <link rel="stylesheet" href="includes/css/base.css"> -->
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.layout.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.fonts.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.wrapper.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.form.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.nav.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.table.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.list.css">
     <!-- THEME -->
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/theme.tuktuk.css">
     <link rel="stylesheet" href="stylesheets/css/tuktuk.theme.media.css">
     <!-- EXTRAS -->
     <link rel="stylesheet" href="extras/lungo.icon.css">
