--- a/examples/profile.html
+++ b/examples/profile.html
@@ -6,18 +6,9 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- <link rel="stylesheet" href="includes/css/base.css"> -->
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.layout.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.fonts.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.wrapper.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.form.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.nav.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.table.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.widget.list.css">
     <!-- THEME -->
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.theme.css">
-    <link rel="stylesheet" href="stylesheets/css/tuktuk.theme.media.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/theme.tuktuk.css">
     <!-- EXTRAS -->
     <link rel="stylesheet" href="extras/lungo.icon.css">
     <link rel="stylesheet" href="extras/lungo.icon.brand.css">
@@ -51,17 +42,18 @@
 
             <div class="row text bold">
                 <div class="column_4">
-                    <a href="#">http://soyjavi.tapquo.com</a></div>
+                    <a href="#">http://soyjavi.tapquo.com</a>
+                </div>
                 <div class="column_3 hide-phone">
-                    <span class="icon pushpin"></span>Bilbao, Vizcaya ES</div>
+                    <span class="icon pushpin"></span>Bilbao, Vizcaya ES
+                </div>
                 <div class="column_2 text right">
                     <a href=""><span class="icon brand twitter"></span></a>
                     <a href=""><span class="icon brand facebook"></span></a>
-                    <a href=""><span class="icon brand dribbble"></span>
-
+                    <a href=""><span class="icon brand dribbble"></span></a>
                 </div>
             </div>
-
+        </div>
     </div>
 </section>
 
