--- a/examples/item.html
+++ b/examples/item.html
@@ -5,22 +5,9 @@
     <title></title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <!-- CSS -->
     <!-- TUKTUK -->
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.layout.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.grid.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.flexbox.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.font.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.form.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.button.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.nav.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.table.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.list.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.widget.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.icon.css">
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.media.css">
-    <!-- TUKTUK.THEME -->
-    <link rel="stylesheet" href="../stylesheets/css/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/theme.tuktuk.css">
     <!-- TUKTUK.APP -->
     <link rel="stylesheet" href="css/item.css">
 </head>
