Section no padding by default

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
     <!-- ========================== FEATURES ========================== -->
-    <section class="bck light features">
+    <section class="padding bck light features">
         <div class="row text center margin_bottom">
             <div class="column_8 offset_2">
                 <h1 class="text color theme">A new kid on the block</h1>
@@ -84,7 +84,7 @@
 
 
     <!-- ========================== COLUMNS ========================== -->
-    <section class="bck lightest text center">
+    <section class="padding bck lightest text center">
         <div class="row ">
             <div class="column_10 offset_1 margin_bottom">
                 <h1 class="text color theme">Turn it up to 12 columns</h1>
@@ -125,7 +125,7 @@
 
 
     <!-- ========================== OFFSETS ========================== -->
-    <section class="bck light text center">
+    <section class="padding bck light text center">
         <div class="row ">
             <div class="column_10 offset_1 margin_bottom">
                 <h1 class="text color theme">Offsetting columns</h1>
@@ -148,7 +148,7 @@
 
 
     <!-- ========================== HEADINGS ========================== -->
-    <section class="bck lightest">
+    <section class="padding bck lightest">
         <div class="row margin_bottom">
             <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Headings</h1>
@@ -168,7 +168,7 @@
 
 
     <!-- ========================== BUTTONS ========================== -->
-    <section class="bck light">
+    <section class="padding bck light">
         <div class="row ">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Buttons</h1>
@@ -207,7 +207,7 @@
 
 
     <!-- ========================== LISTS ========================== -->
-    <section>
+    <section class="padding">
         <div class="row">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Lists</h1>
@@ -285,7 +285,7 @@
 
 
     <!-- ========================== FORMS & TABLES ========================== -->
-    <section class="bck light">
+    <section class="padding bck light">
          <div class="row margin_bottom">
                 <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Forms & Tables</h1>
@@ -383,7 +383,7 @@
     </section>
 
     <!-- ========================== Show & hide ========================== -->
-    <section class="bck lightest ">
+    <section class="padding bck lightest ">
         <div class="row margin_bottom">
             <div class="column_10 offset_1 text center ">
                 <h1 class="text color theme">Show & Hide</h1>
@@ -425,7 +425,7 @@
     </section>
 
     <!-- ========================== Typography ========================== -->
-    <section class="bck light">
+    <section class="padding bck light">
         <div class="row ">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Typography</h1>
@@ -474,7 +474,7 @@
     </section>
 
     <!-- ========================== Navigation ========================== -->
-    <section class="bck lightest">
+    <section class="padding bck lightest">
         <div class="row ">
             <div class="column_10 offset_1 text center">
                 <h1 class="text color theme">Navigation</h1>
@@ -486,17 +486,17 @@
         <div class="row text center">
             <nav class="group text bold">
                 <a href="#" class="active"><span class="icon folder"></span>Slides</a>
-                <a href="#"><span class="icon picture"></span>Themes</a>
-                <a href="#"><span class="icon settings"></span>Applications</a>
-                <a href="#"><span class="icon users"></span>Friends</a>
-                <a href="#"><span class="icon star-full"></span>Favorites</a>
+                <a href="#"><span class="icon cube"></span>Themes</a>
+                <a href="#"><span class="icon cube"></span>Applications</a>
+                <a href="#"><span class="icon cube"></span>Friends</a>
+                <a href="#"><span class="icon cube"></span>Favorites</a>
             </nav>
         </div>
     </section>
 
 
     <!-- ========================== Widgets ========================== -->
-    <section class="bck lightest">
+    <section class="padding bck lightest">
         <div class="row ">
             <div class="column_10 offset_1 text center margin_bottom">
                 <h1 class="text color theme">Widgets</h1>
@@ -552,8 +552,8 @@
                 <div class="margin_bottom">Modal notifications for any device.</div>
                 <div class="row">
                     <button class="column_2" data-tuktuk-modal="default_modal">Default</button>
-                    <button class="column_2 cancel" data-tuktuk-modal="small_modal">Small</button>
-                    <button class="column_2 accept" data-tuktuk-modal="big_modal">Big</button>
+                    <button class="column_2 cancel" data-tuktuk-modal="small_modal">column_6</button>
+                    <button class="column_2 accept" data-tuktuk-modal="big_modal">column_8</button>
                 </div>
 
             </div>
@@ -569,14 +569,14 @@
         <button data-action="close" class="button">Cancel</button>
     </div>
 
-    <div id="small_modal" data-tuktuk="modal" class="small">
+    <div id="small_modal" data-tuktuk="modal" class="column_6">
         <h5 class="text bold">Small modal window</h5>
         <hr/>
         <div class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
         <button data-action="close" class="button anchor cancel">Cancel</button>
     </div>
 
-    <div id="big_modal" data-tuktuk="modal" class="big">
+    <div id="big_modal" data-tuktuk="modal" class="column_8">
         <h5 class="text bold">Big modal window</h5>
         <hr/>
         <div class="margin_bottom text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
@@ -584,7 +584,7 @@
     </div>
 
     <!-- ========================== AUTHOR ========================== -->
-    <section class="bck dark">
+    <section class="padding bck dark">
         <div class="row margin_bottom">
             <div class="column_10 offset_1 text center color white">
                 <h1>Author</h1>
@@ -632,7 +632,7 @@
 
     <!-- TUKTUK.WIDGETS -->
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="package/widgets/tuktuk.widget.modal.js"></script>
+    <script src="package/widgets/modal/tuktuk.widget.modal.js"></script>
 
 </body>
 </html>
