--- a/examples/modal.html
+++ b/examples/modal.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../package/tuktuk.css">
     <link rel="stylesheet" href="../package/theme.tuktuk.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="../package/widgets/modal/tuktuk.widget.modal.css">
+    <link rel="stylesheet" href="../package/widgets/modal/tuktuk.modal.css">
 </head>
 <body>
 
@@ -50,7 +50,7 @@
 
 
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="../widgets/modal/build/tuktuk.widget.modal.js"></script>
+    <script src="../widgets/modal/build/tuktuk.modal.js"></script>
 
     <script>
         TukTuk.Modal.show("a")
