--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../package/widgets/icon/tuktuk.icon.css">
     <link rel="stylesheet" href="../package/widgets/boxes/tuktuk.boxes.css">
     <link rel="stylesheet" href="../package/widgets/boxes/tuktuk.boxes.theme.css">
-
 </head>
 <body data-tuktuk="boxes">
     <aside id="menu" class="dark absolute">
@@ -20,7 +19,7 @@
             <div class="session">
                 <img src="#" class="avatar "/>
                 <strong class="text">logged in as <a href="#" class="active">soyjavi</a></strong>
-                <button data-action="close" class="small tiny secondary">close</button>
+                <button data-box="close" class="small tiny secondary">close</button>
             </div>
         </header>
         <article class="scroll">
@@ -46,7 +45,7 @@
         <article class="scroll">
             <img src="#" class="avatar margin"/>
             <h4 class="margin_left margin_bottom margin_right text bold">
-                Javi Jiménez<div class="float right tag">pro</div></h4>
+                Javi Jiménez<div class="float right tag bck cancel">pro</div></h4>
             <hr/>
             <nav class="margin text bold uppercase" data-link="user">
                 <a href="#"><span class="icon cube"></span>london, UK</a>
@@ -55,7 +54,7 @@
             </nav>
             <hr/>
             <nav class="margin" data-button="relationships">
-                <button><span class="icon users"></span>Following</button>
+                <button data-tuktuk-modal="modal"><span class="icon users"></span>Following</button>
                 <button class="secondary">List</button>
             </nav>
             <hr>
@@ -74,32 +73,63 @@
                 <a href="#">TAGS<span>(160)</span></a>
             </nav>
         </article>
-        <!-- <footer>title</footer> -->
-
     </aside>
 
     <section>
         <header>
-            <nav data-filter="slidus" class="text bold" >
+            <nav class="left text bold" data-filter="slidus">
                 <a href="#" class="active">SHOTS<small>(100)</small></a>
                 <a href="#">PROJECTS<small>(3)</small></a>
                 <a href="#">LIKES<small>(192)</small></a>
                 <a href="#">TAGS<small>(160)</small></a>
+            </nav>
+
+            <nav class="right">
+                <button class="small">Following</button>
+                <button class="small secondary">List</button>
             </nav>
         </header>
         <article class="padding">
             <h1>lorem ipsum</h1>
             <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat nesciunt inventore culpa modi. Explicabo maiores vel inventore eius iusto dolorum quia autem doloribus ut repellat voluptate rerum veniam natus recusandae.</h6>
         </article>
-        <!-- <footer>title</footer> -->
+        <footer>
+            <nav class="left text bold" data-filter="slidus">
+                <a href="#" class="active">SHOTS<small>(100)</small></a>
+                <a href="#">PROJECTS<small>(3)</small></a>
+                <a href="#">LIKES<small>(192)</small></a>
+                <a href="#">TAGS<small>(160)</small></a>
+            </nav>
 
+            <nav class="right">
+                <button class="small">Following</button>
+                <button class="small secondary">List</button>
+            </nav>
+        </footer>
     </section>
 
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="../package/widgets/boxes/tuktuk.boxes.js"></script>
+    <div id="modal" data-tuktuk="modal">
+        <h5 class="text bold">That's all, folks</h5>
+        <hr/>
+        <span class="text -small -big">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum assumenda aperiam nobis quam earum nihil veritatis modi possimus blanditiis perferendis obcaecati voluptatibus fuga eaque ad et atque nostrum porro expedita!</span>
+        <div class="margin_all">
+            <button class="button accept">Accept</button>
+            <button data-modal="close" class="button cancel">Cancel</button>
+        </div>
+    </div>
 
+    <div id="right" data-tuktuk="modal" class="side column_6">
+        <h3 class="inline">Menu in ...</h3>
+        <nav class="inline right">
+            <button class="small" data-modal="close">Close</button>
+        </nav>
+    </div>
+
+    <script src="components/jquery/jquery.js"></script>
+    <script src="../package/widgets/boxes/tuktuk.boxes.js"></script>
+    <script src="../package/widgets/modal/tuktuk.modal.js"></script>
     <script>
-    console.error( TukTuk.Boxes)
+        TukTuk.Modal.show("right");
     </script>
 </body>
 </html>
