--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -17,14 +17,13 @@
     <aside id="menu" class="dark absolute">
         <header>
             <div class="session">
-                <img src="#" class="avatar "/>
+                <img src="#" class="avatar"/>
                 <strong class="text">logged in as <a href="#" class="active">soyjavi</a></strong>
                 <button data-box="close" class="small tiny secondary">close</button>
             </div>
         </header>
         <article class="scroll">
             <img src="#" class="avatar margin"/>
-
             <nav data-menu="slidus" class="text center bold">
                 <a href="#" class="active">SHOTS<small>(100)</small></a>
                 <a href="#">PROJECTS<small>(3)</small></a>
@@ -45,7 +44,7 @@
         <article class="scroll">
             <img src="#" class="avatar margin"/>
             <h4 class="margin_left margin_bottom margin_right text bold">
-                Javi Jiménez<div class="float right tag bck cancel">pro</div></h4>
+                Javi Jiménez<span class="margin_left tag bck cancel">pro</span></h4>
             <hr/>
             <nav class="margin text bold uppercase" data-link="user">
                 <a href="#"><span class="icon cube"></span>london, UK</a>
@@ -64,8 +63,10 @@
                 <li><strong>14</strong><small>listed</small></li>
             </ul>
             <hr>
-            <strong class="text big display block margin">About Orman Clark</strong>
-            <div class="display block margin text justify small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br/>Repellendus molestiae atque facilis odit magnam recusandae mollitia hic molestias corporis eos! Commodi perspiciatis nam maiores voluptate repudiandae cupiditate cum impedit. Quas!</div>
+            <div class="margin">
+                <strong class="text big normal display block ">About <a href="#">Orman Clark</a></strong>
+                <div class="display block  text justify small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br/>Repellendus molestiae atque facilis odit magnam recusandae mollitia hic molestias corporis eos! Commodi perspiciatis nam maiores voluptate repudiandae cupiditate cum impedit. Quas!</div>
+            </div>
             <nav data-menu="slidus" class="text center bold">
                 <a href="#" class="active">SHOTS<span>(100)</span></a>
                 <a href="#">PROJECTS<span>(3)</span></a>
