New style of button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="package/tuktuk.css">
     <link rel="stylesheet" href="package/theme.tuktuk.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="package/widgets/icon/tuktuk.widget.icon.css">
-    <link rel="stylesheet" href="package/widgets/modal/tuktuk.widget.modal.css">
+    <link rel="stylesheet" href="package/widgets/icon/tuktuk.icon.css">
+    <link rel="stylesheet" href="package/widgets/modal/tuktuk.modal.css">
 </head>
 
 <body>
@@ -175,7 +175,7 @@
                 <h3 class="text thin">a site without buttons? Tuktuk has a gallery of styles and sizes that will be enough to interact with your site.</h3>
              </div>
         </div>
-        <div class="row">
+        <div class="row margin_bottom">
             <div class="column_8 ">
                   <a href="#" class="button large">Large</a>
                   <a href="#" class="button ">Normal</a>
@@ -189,18 +189,33 @@
                 <a href="#" class="button anchor margin_top">Anchor</a>
             </div>
         </div>
-        <div class="row">
+        <div class="row margin_bottom">
             <div class="column_8 ">
-                  <a href="#" class="button large"><span class="icon twitter"></span>Large</a>
-                  <a href="#" class="button "><span class="icon facebook"></span>Normal</a>
-                  <a href="#" class="button secondary"><span class="icon dribbble"></span>Secondary</a>
-                  <a href="#" class="button accept"><span class="icon accept"></span>Accept</a>
-                  <a href="#" class="button cancel"><span class="icon cancel"></span>Cancel</a>
-                  <a href="#" class="button small"><span class="icon wordpress"></span>Small</a>
-                  <a href="#" class="button tiny"><span class="icon github"></span>Tiny</a>
+                  <a href="#" class="button large"><span class="icon cube"></span>Large</a>
+                  <a href="#" class="button "><span class="icon cube"></span>Normal</a>
+                  <a href="#" class="button secondary"><span class="icon cube"></span>Secondary</a>
+                  <a href="#" class="button accept"><span class="icon cube"></span>Accept</a>
+                  <a href="#" class="button cancel"><span class="icon cube"></span>Cancel</a>
+                  <a href="#" class="button small"><span class="icon cube"></span>Small</a>
+                  <a href="#" class="button tiny"><span class="icon cube"></span>Tiny</a>
               </div>
             <div class="column_4">
-                <a href="#" class="button anchor margin_top"><span class="icon accept"></span>Anchor</a>
+                <a href="#" class="button anchor margin_top"><span class="icon cube"></span>Anchor</a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column_8 ">
+                  <a href="#" class="button large icon cube"></a>
+                  <a href="#" class="button icon cube"></a>
+                  <a href="#" class="button secondary icon cube"></a>
+                  <a href="#" class="button accept icon cube"></a>
+                  <a href="#" class="button cancel icon cube"></a>
+                  <a href="#" class="button small icon cube"></a>
+                  <a href="#" class="button tiny icon cube"></a>
+              </div>
+            <div class="column_4">
+                <a href="#" class="button anchor icon cube margin_top"></a>
             </div>
         </div>
     </section>
@@ -632,7 +647,7 @@
 
     <!-- TUKTUK.WIDGETS -->
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="package/widgets/modal/tuktuk.widget.modal.js"></script>
+    <script src="package/widgets/modal/tuktuk.modal.js"></script>
 
 </body>
 </html>
