Modal with header/article/footer

--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -110,20 +110,30 @@
     </section>
 
     <div id="modal" data-tuktuk="modal">
-        <h5 class="text bold">That's all, folks</h5>
-        <hr/>
-        <span class="text -small -big">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum assumenda aperiam nobis quam earum nihil veritatis modi possimus blanditiis perferendis obcaecati voluptatibus fuga eaque ad et atque nostrum porro expedita!</span>
-        <div class="margin_all">
+        <header>
+            <h5 class="text bold">That's all, folks</h5>
+        </header>
+        <article class="text -small -big">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum assumenda aperiam nobis quam earum nihil veritatis modi possimus blanditiis perferendis obcaecati voluptatibus fuga eaque ad et atque nostrum porro expedita!</article>
+        <footer>
             <button class="button accept">Accept</button>
             <button data-modal="close" class="button cancel">Cancel</button>
+        </footer>
+
         </div>
-    </div>
 
     <div id="right" data-tuktuk="modal" class="side column_6">
-        <h3 class="inline">Menu in ...</h3>
-        <nav class="inline right">
-            <button class="small" data-modal="close">Close</button>
-        </nav>
+        <header>
+            <h3 class="inline">Menu in ...</h3>
+            <nav class="inline right">
+                <button class="small secondary" data-modal="close">Close</button>
+            </nav>
+        </header>
+        <article>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos dolorum minus fugiat rem similique velit aperiam est sequi neque nulla tenetur minima autem facilis temporibus quaerat consectetur impedit praesentium.
+        </article>
+        <footer>
+            <button class="accept">Accept</button>
+        </footer>
     </div>
 
     <script src="components/jquery/jquery.js"></script>
