changes in modal (position fixed)

--- a/index.html
+++ b/index.html
@@ -578,24 +578,33 @@
     <!-- ========================== MODALS ========================== -->
 
     <div id="default_modal" data-tuktuk="modal">
-        <h5 class="text bold">Default modal window</h5>
-        <hr/>
+        <header>
+            <h5 class="text bold">Default modal window</h5>
+        </header>
         <div class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
-        <button data-action="close" class="button">Cancel</button>
+        <footer>
+            <button data-modal="close" class="button">Cancel</button>
+        </footer>
     </div>
 
     <div id="small_modal" data-tuktuk="modal" class="column_6">
-        <h5 class="text bold">Small modal window</h5>
-        <hr/>
+        <header>
+            <h5 class="text bold">Small modal window</h5>
+        </header>
         <div class="margin_bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
-        <button data-action="close" class="button anchor cancel">Cancel</button>
+        <footer>
+            <button data-modal="close" class="button anchor cancel">Cancel</button>
+        </footer>
     </div>
 
     <div id="big_modal" data-tuktuk="modal" class="column_8">
-        <h5 class="text bold">Big modal window</h5>
-        <hr/>
+        <header>
+            <h5 class="text bold">Big modal window</h5>
+        </header>
         <div class="margin_bottom text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nihil aut sit incidunt amet modi dolores a sed.</div>
-        <button data-action="close" class="button large accept">Cancel</button>
+        <footer>
+            <button data-modal="close" class="button large accept">Cancel</button>
+        </footer>
     </div>
 
     <!-- ========================== AUTHOR ========================== -->
@@ -609,7 +618,7 @@
 
         <div class="row margin_bottom">
             <div class="column_4 offset_4 text center white">
-                <img src="http://tapquo.com/images/social/soyjavi.jpeg" class="responsive rounded margin_bottom"/>
+                <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="responsive rounded margin_bottom"/>
                 <br/>
                 <a href="https://twitter.com/soyjavi" class="twitter-follow-button " data-show-count="true" data-dnt="true">Follow @soyjavi</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
