Changes in markup

--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -17,13 +17,13 @@
     <aside id="menu" class="dark absolute">
         <header>
             <div class="session">
-                <img src="#" class="avatar"/>
+                <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar"/>
                 <strong class="text">logged in as <a href="#" class="active">soyjavi</a></strong>
                 <button data-box="close" class="small tiny secondary">close</button>
             </div>
         </header>
         <article class="scroll">
-            <img src="#" class="avatar margin"/>
+            <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar margin"/>
             <nav data-menu="slidus" class="text center bold">
                 <a href="#" class="active">SHOTS<small>(100)</small></a>
                 <a href="#">PROJECTS<small>(3)</small></a>
@@ -42,7 +42,7 @@
             <button class="small tiny secondary float left" data-tuktuk-box="menu">Menu</button>
         </header>
         <article class="scroll">
-            <img src="#" class="avatar margin"/>
+            <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar margin"/>
             <h4 class="margin_left margin_bottom margin_right text bold">
                 Javi Jiménez<span class="margin_left tag bck cancel">pro</span></h4>
             <hr/>
@@ -118,8 +118,7 @@
             <button class="button accept">Accept</button>
             <button data-modal="close" class="button cancel">Cancel</button>
         </footer>
-
-        </div>
+    </div>
 
     <div id="right" data-tuktuk="modal" class="side column_6">
         <header>
@@ -140,7 +139,8 @@
     <script src="../package/widgets/boxes/tuktuk.boxes.js"></script>
     <script src="../package/widgets/modal/tuktuk.modal.js"></script>
     <script>
-        TukTuk.Modal.show("right");
+        // TukTuk.Modal.show("right");
+        TukTuk.Box.show("menu");
     </script>
 </body>
 </html>
