--- a/examples/boxes.html
+++ b/examples/boxes.html
@@ -6,7 +6,7 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" href="../package/tuktuk.css">
-    <link rel="stylesheet" href="../package/theme.tuktuk.css">
+    <link rel="stylesheet" href="../package/theme.default.css">
     <!-- TUKTUK.WIDGETS -->
     <link rel="stylesheet" href="../package/widgets/modal/tuktuk.modal.css">
     <link rel="stylesheet" href="../package/widgets/icon/tuktuk.icon.css">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../package/widgets/boxes/tuktuk.boxes.theme.css">
 </head>
 <body data-tuktuk="boxes">
+
     <aside id="menu" class="dark absolute">
         <header>
             <div class="session">
@@ -25,10 +26,8 @@
         <article class="scroll">
             <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar margin"/>
             <nav data-menu="slidus" class="text center bold">
-                <a href="#" class="active">SHOTS<small>(100)</small></a>
-                <a href="#">PROJECTS<small>(3)</small></a>
-                <a href="#">LIKES<small>(192)</small></a>
-                <a href="#">TAGS<small>(160)</small></a>
+                <a href="#" class="active">item .active<small>(100)</small></a>
+                <a href="#">item<small>(3)</small></a>
             </nav>
 
             <nav class="margin">
@@ -43,8 +42,8 @@
         </header>
         <article class="scroll">
             <img src="http://cdn.tapquo.com/photos/soyjavi.jpg" class="avatar margin"/>
-            <h4 class="margin_left margin_bottom margin_right text bold">
-                Javi Jiménez<span class="margin_left tag bck cancel">pro</span></h4>
+            <h4 class="margin_left margin_bottom text bold inline">Javi Jiménez</h4>
+            <span class="margin_left tag bck theme inline text bold">pro</span>
             <hr/>
             <nav class="margin text bold uppercase" data-link="user">
                 <a href="#"><span class="icon cube"></span>london, UK</a>
@@ -79,15 +78,22 @@
     <section>
         <header>
             <nav class="left text bold" data-filter="slidus">
-                <a href="#" class="active">SHOTS<small>(100)</small></a>
-                <a href="#">PROJECTS<small>(3)</small></a>
-                <a href="#">LIKES<small>(192)</small></a>
-                <a href="#">TAGS<small>(160)</small></a>
+                <a href="#" class="active">item.active<small>small</small></a>
+                <a href="#">item</a>
             </nav>
 
             <nav class="right">
-                <button class="small">Following</button>
-                <button class="small secondary">List</button>
+                <button class="tiny secondary">tiny</button>
+                <button class="small secondary">small</button>
+                <button class="tiny secondary icon twitter">@soyjavi</button>
+                <button class="small secondary icon twitter">@soyjavi</button>
+                <button class="tiny secondary icon twitter"></button>
+                <button class="small secondary icon twitter"></button>
+                <a href="#" class="button tiny icon twitter"></a>
+                <a href="#" class="button small icon twitter"></a>
+                <a href="#" class="button tiny icon twitter">@soyjavi</a>
+                <a href="#" class="button small icon twitter">@soyjavi</a>
+
             </nav>
         </header>
         <article class="padding">
